# harness-control-plane

./: .env.example  .gitignore  DESKTOP.md  Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.cursor/: hooks.json
.cursor/agents/: README.md  deployer.md  implementer.md  incident-resolver.md  planner.md  qa.md  reviewer.md  spec-writer.md
.cursor/commands/: run-browser.md  run-cua.md  run-e2e.md  sdlc-baseline.md  sdlc-config.md  sdlc-deploy.md  sdlc-discovery.md  sdlc-doctor.md  sdlc-feature.md  sdlc-goal.md  sdlc-handoff.md  sdlc-hydrate.md  sdlc-implement.md  sdlc-incident.md  sdlc-init.md  sdlc-learn.md  sdlc-plan.md  sdlc-post-deployment.md  sdlc-reflect.md  sdlc-reset.md  sdlc-spec.md  sdlc-token-health.md
.cursor/hooks/: README.md  hook_handler.py  sdlc_runtime_guard.py  session-start.sh  (+1 more)
.github/: README.md
.sdlc/: INDEX.md  sdlc.yaml
cli/: index.mjs
desktop-sidecar/: build.mjs  index.cjs
e2e/: chat-artifact-panel.spec.ts  platform-complete.spec.ts  runtime-browser-panel.spec.ts  runtime-console-stream.spec.ts
embed/: index.d.ts  index.mjs
scheduler/: Cargo.toml  business-scheduler.service
scheduler/src/: main.rs
scripts/: astro-cli.mjs  dev-port.mjs  generate-icons.py  prepare-desktop-dev.mjs  reset.sh  start-runtime-console.sh  sync-desktop-version.mjs  tauri-dev.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: business-server-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  secrets.rs
(+378 files in other folders)
