[package]
name = "business-scheduler"
version = "0.1.0"
description = "OS-level workflow scheduler daemon (ADR-022)"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "business-scheduler"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
