[package]
name = "business-runtime"
version = "0.1.0"
description = "Business Runtime desktop shell"
authors = ["jambu"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "business_runtime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "business-runtime"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }
keyring = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
